# juice-prod-schedule

./: .gitignore  CMakeLists.txt  README.md  run.sh
.github/workflows/: ci.yml
data/: input1.txt  input2.txt  input3.txt
include/: algorithm.h  neighborhoods.h  order.h  parser.h  schedule_data.h  tabu_list.h
results/: best_results_summary.txt  n60A_results.txt  n60B_results.txt  n60C_results.txt  n60D_results.txt  n60E_results.txt  n60F_results.txt  n60G_results.txt  n60H_results.txt  n60I_results.txt  n60J_results.txt  n60K_results.txt  n60L_results.txt  n60M_results.txt  n60N_results.txt  n60O_results.txt  n60P_results.txt  summary copy.txt  summary.txt
src/: algorithm.cpp  main.cpp  neighborhoods.cpp  parser.cpp  run.sh
